--- a/index.html
+++ b/index.html
@@ -39,13 +39,18 @@
           <button>Смотреть каталог</button>
         </div>
         <div class="right">
+          <p class="right__price">22 000 P</p>
+          <p class="right__dia">28 мм диаметр</p>
           <img class="bg" src="/images/ellipse.png" alt="">
           <img class="wath" src="/images/watch_main.png" alt="">
         </div>
       </div>
 
       <div class="range">
-        <h2>Популярные модели</h2>
+        <div>
+          <h2>Популярные модели</h2>
+          <a href="#">Смотреть все</a>
+        </div>
         <div class="block">
           <div class="cards">
             <div class="card">
@@ -102,10 +107,16 @@
           <div class="descr">
             <p>Подписывайтесь на <b>@conquest_watch</b> в соцсетях и узнавайте о новинках и акциях первыми.</p>
           </div>
-          <div>
-            <img src="/images/instagram_icon.svg" alt="">
-            <img src="/images/facebook_icon.svg" alt="">
-            <img src="/images/twitter_icon.svg" alt="">
+          <div class="network__links">
+            <div>
+              <img src="/images/instagram_icon.svg" alt="">
+            </div>
+            <div>
+              <img src="/images/facebook_icon.svg" alt="">
+            </div>
+            <div>
+              <img src="/images/twitter_icon.svg" alt="">
+            </div>
           </div>
         </din>
         <div class="network__right">
