--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 </head>
 <body>
   <div class="wrapper">
-    <header>
-      <div>
+    <header class="header">
+      <div class="header__logo">
         <img src="/images/logo.svg" alt="">
         <p>CONQUEST</p>
       </div>
-      <div>
+      <div class="header__nav">
         <nav>
           <a href="">Каталог</a>
           <a href="">Акции</a>
@@ -22,7 +22,7 @@
           <a href="">Контакты</a>
         </nav>
       </div>
-      <div class="link">
+      <div class="header__link">
         <img src="/images/search.svg" alt="">
         <img src="/images/like.svg" alt="">
         <img src="/images/bascket.svg" alt="">
@@ -47,9 +47,9 @@
       </div>
 
       <div class="range">
-        <div>
+        <div class="range__whatch">
           <h2>Популярные модели</h2>
-          <a href="#">Смотреть все</a>
+          <a  href="#">Смотреть все</a>
         </div>
         <div class="block">
           <div class="cards">
